[package]
name = "keriox-tcp-client"
version = "0.1.0"
authors = ["Edyta Pawlak <edyta.pawlakk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keri = { git = "https://github.com/edytapawlak/keriox", branch = "update_keri_module" } 
clap = "2.33.3"
tokio = { version = "1.2.0", features = ["full"] }
tempfile = "3"
